--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,9 @@
   --bs-font-sans-serif: "opendyslexic", sans-serif;
   --bs-font-monospace: "opendyslexic", sans-serif;
 }
+.bg-feature-card {
+  background: linear-gradient(to bottom, #fac1ab, white);
+}
 
 .deuteranopia {
   filter: url('#deuteranopia-filter');
