--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,11 +29,14 @@
   font-style: italic;
 }
 
+:root {
+  --bs-primary: #238b44;
   --bs-font-sans-serif: 'Poppins', sans-serif;
+  --light: #105295;
 }
 
-:root [data-bs-theme="contrast"] {
-  --bs-primary: #fff;
+[data-bs-theme="contrast"] {
+  --bs-primary: #238b44;
 }
 
 [data-font-theme="dyslexic"] {
@@ -60,6 +63,17 @@ h1 {
     font-size: 3rem;
   }
 }
+
+.btn-primary {
+  color: #fff;
+  background-color: var(--bs-primary);
+  border-color: var(--bs-primary);
+}
+
+.bg-light {
+  background-color: green;
+}
+
 .bg-feature-card {
   background: linear-gradient(to bottom, #fac1ab, white);
 }
