--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,11 @@ h1 {
   background-color: green;
 }
 
+.header-background {
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(10px);
+}
+
 .bg-feature-card {
   background: linear-gradient(20deg, #ffe0d3, white, white);
 }
