Style the CTA button in contrast mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,3 +263,9 @@ header {
 [data-bs-theme="contrast"] .resources-contrast-article {
   background-color: transparent;
 }
+
+[data-bs-theme="contrast"] .btn-primary {
+  color: #000;
+  background-color: #fff;
+  
+}
