Enable dyslexic font in high contrast mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,11 @@
   --bs-font-monospace: "opendyslexic", sans-serif;
 }
 
+[data-bs-theme="contrast"][data-font-theme="dyslexic"] {
+  --bs-font-sans-serif: "opendyslexic", sans-serif;
+  --bs-font-monospace: "opendyslexic", sans-serif;
+}
+
 html {
   scroll-behavior: smooth;
 }
