--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,13 +288,16 @@ header {
 
 }
 
+
+
 /* Credit for custrom form component sizes: https://stackoverflow.com/questions/55593229/increasing-the-size-of-a-bootstrap-checkbox */
 .form-check-input {
   clear: left;
 }
 
 .form-switch.form-switch-sm {
-  margin-bottom: 0.5rem; /* JUST FOR STYLING PURPOSE */
+  margin-bottom: 0.5rem;
+  /* JUST FOR STYLING PURPOSE */
 }
 
 .form-switch.form-switch-sm .form-check-input {
@@ -304,7 +307,8 @@ header {
 }
 
 .form-switch.form-switch-md {
-  margin-bottom: 1rem; /* JUST FOR STYLING PURPOSE */
+  margin-bottom: 1rem;
+  /* JUST FOR STYLING PURPOSE */
 }
 
 .form-switch.form-switch-md .form-check-input {
@@ -314,7 +318,8 @@ header {
 }
 
 .form-switch.form-switch-lg {
-  margin-bottom: 1.5rem; /* JUST FOR STYLING PURPOSE */
+  margin-bottom: 1.5rem;
+  /* JUST FOR STYLING PURPOSE */
 }
 
 .form-switch.form-switch-lg .form-check-input {
@@ -324,11 +329,38 @@ header {
 }
 
 .form-switch.form-switch-xl {
-  margin-bottom: 2rem; /* JUST FOR STYLING PURPOSE */
+  margin-bottom: 2rem;
+  /* JUST FOR STYLING PURPOSE */
 }
 
 .form-switch.form-switch-xl .form-check-input {
   height: 2.5rem;
   width: calc(4rem + 0.75rem);
   border-radius: 5rem;
+}
+
+/* Add primary color when toggled active */
+.form-check-input:checked {
+  background-color: var(--bs-primary);
+  border-color: var(--bs-primary);
+}
+
+[data-bs-theme="contrast"] .form-check-input:checked {
+  background-color: #000;
+  border-color: #fff;
+}
+
+.form-check-input:checked:focus {
+  box-shadow: 0 0 0 0.25rem rgba(32, 201, 151, 0.25);
+}
+
+.form-check-input:checked::before {
+  background-color: #fff;
+  transform: translateX(calc(100% + 0.25rem));
+}
+
+[data-bs-theme="contrast"] .form-check-input:checked::before {
+  background-color: #000;
+  border: 2px solid #fff;
+  transform: translateX(calc(100% + 0.25rem));
 }
