--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,19 @@ h1 {
   border-color: #137b34;
 }
 
+.btn-secondary {
+  color: #fff;
+  background-color: #cd4e1b;
+  border-color: #cd4e1b;
+  border-radius: 50rem;
+}
+
+.btn-secondary:hover {
+  color: #fff;
+  background-color: #d5683d;
+  border-color: #d5683d;
+}
+
 .bg-light {
   background-color: green;
 }
@@ -293,6 +306,8 @@ header {
 /* Credit for custrom form component sizes: https://stackoverflow.com/questions/55593229/increasing-the-size-of-a-bootstrap-checkbox */
 .form-check-input {
   clear: left;
+  width: 2.5em;
+  height: 1.5em;
 }
 
 .form-switch.form-switch-sm {
