--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,3 +423,10 @@ header {
 .offcanvas-body li .form-check {
   margin-bottom: 0;
 }
+
+
+/* Footer styles */
+
+.footerdiv li a:hover {
+  color: rgba(0, 0, 0, .7)!important;
+}
