--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,11 +212,13 @@ header {
 }
 .header-background {
   background-color: rgba(255, 255, 255, 0.8);
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
 }
 
 [data-bs-theme="contrast"] .header-background {
   background-color: rgba(0, 0, 0, 0.8);
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
 }
 
