fix active nav links by adding specificity

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ header {
 }
 
 [data-bs-theme="contrast"] .navbar-brand,
-[data-bs-theme="contrast"] .nav-link {
+[data-bs-theme="contrast"] .navbar-nav .nav-link {
   color: var(--bs-light);
 }
 
